# textcpp

./: .gitignore  CMakeLists.txt  README  Readme  Readme.md  requirements.txt  setup.py
.github/workflows/: deploy.yaml
src/textcpp/: operations.h
src/textcpp/others/: add.cpp  bindings_others.cpp  sub.cpp
src/textcpp/preprocessing/: bindings_preprocessing.cpp  extract_ngrams.cpp  normalize.cpp  normalize.h  stopword_utils.cpp  stopword_utils.h  tokenizer.h
src/textcpp/text_utils/: bindings_text_utils.cpp  count_words.cpp  frequency_count.cpp  read.cpp  read.h
